erDiagram
  USER ||--o{ AUDIT_LOG : performs
  USER ||--o{ SITE_ACCESS : has
  SITE ||--o{ SITE_ACCESS : grants
  SITE ||--o{ TOY_WEATHER_READING : has
  SITE ||--o{ GENERATION_READING : has
  SITE ||--o{ SCHEDULE_WINDOW : has
  SITE ||--o{ DSM_RESULT : has
  SCHEDULE_WINDOW ||--o{ DSM_RESULT : evaluated_by

  USER {
    uuid id PK
    string email
    string password_hash
    string role
    timestamp created_at
  }

  SITE {
    uuid id PK
    string name
    float latitude
    float longitude
    string timezone
    float capacity_mw
    float panel_efficiency
    float tilt
    float azimuth
    timestamp created_at
  }

  SITE_ACCESS {
    uuid id PK
    uuid user_id FK
    uuid site_id FK
    string role
  }

  TOY_WEATHER_READING {
    uuid id PK
    uuid site_id FK
    timestamp ts
    float irradiance_w_m2
    float cloud_cover_percent
    float temperature_c
    float humidity_percent
    float wind_speed_mps
    float rain_probability_percent
    int quality_flag
  }

  GENERATION_READING {
    uuid id PK
    uuid site_id FK
    timestamp ts
    float actual_generation_mw
    float predicted_generation_mw
    string source
  }

  SCHEDULE_WINDOW {
    uuid id PK
    uuid site_id FK
    timestamp window_start
    timestamp window_end
    float scheduled_generation_mw
    float allowed_dsm_threshold_percent
    float penalty_rate_per_mw
  }

  DSM_RESULT {
    uuid id PK
    uuid site_id FK
    uuid schedule_window_id FK
    timestamp ts
    float predicted_generation_mw
    float scheduled_generation_mw
    float deviation_mw
    float deviation_percent
    string penalty_status
    float estimated_penalty_cost
    float fuzzy_risk_score
    string fuzzy_risk_level
    float confidence_score
    string explanation
  }

  AUDIT_LOG {
    uuid id PK
    uuid user_id FK
    string action
    string entity_type
    uuid entity_id
    json details
    string ip_address
    timestamp created_at
  }
